# gen_ai_projects

./: README.md  pyproject.toml  travel_agent_planner_with_memory.ipynb
notebooks/: better_thinking_agent.ipynb  simple_rag_1.ipynb  simple_reflect_agent.ipynb  thinking_agent_with_planner.ipynb  travel_agent_planner.ipynb  travel_agent_planner_with_memory.ipynb  vectorstore_simple_rag.ipynb
